pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/cli_root/zpool_ini
dist_pkgdata_SCRIPTS = \
	cleanup.ksh \
	zpool_ini_att_det_add_rm.ksh \
	zpool_ini_import_export.ksh \
	zpool_ini.kshlib \
	zpool_ini_offln_exp_imp_onl.ksh \
	zpool_ini_online_offline.ksh \
	zpool_ini_split.ksh \
	zpool_ini_start_and_cancel_neg.ksh \
	zpool_ini_start_and_cancel_pos.ksh
	zpool_ini_suspend_resume.ksh \
	zpool_ini_unsupported_vdevs.ksh
	zpool_ini_verify_checksums.ksh \
	zpool_ini_verify_initialized.ksh

dist_pkgdata_DATA = \
	zpool_ini.kshlib
